--- a/src/ui/SearchScreen.fxml
+++ b/src/ui/SearchScreen.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="pane" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SearchOrderController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="pane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SearchOrderController">
    <children>
       <Label fx:id="order_number_label" layoutX="471.0" layoutY="229.0" styleClass="lbl" text="Order Number" />
       <TextField fx:id="order_number_input" layoutX="578.0" layoutY="225.0" promptText="Ex. 12" />
-      <Button fx:id="serach_order_btn" layoutX="749.0" layoutY="223.0" mnemonicParsing="false" onAction="#searchOrder" prefHeight="30.0" prefWidth="149.0" styleClass="btn" text="Search Order" textFill="#2c2c2c" />
+      <Button fx:id="serach_order_btn" disable="true" layoutX="749.0" layoutY="223.0" mnemonicParsing="false" onAction="#searchOrder" prefHeight="30.0" prefWidth="149.0" styleClass="btn" text="Search Order" textFill="#2c2c2c" />
       <Button fx:id="back_btn" layoutX="584.0" layoutY="506.0" mnemonicParsing="false" onAction="#back_to_index" prefHeight="30.0" prefWidth="149.0" styleClass="btn" text="Back" textFill="#1b1919" />
       <Label layoutX="619.0" layoutY="280.0" prefHeight="17.0" prefWidth="78.0" styleClass="lbl" text="Order details:" />
       <Label id="res_lbl" fx:id="search_res" alignment="TOP_LEFT" contentDisplay="TOP" layoutX="494.0" layoutY="312.0" prefHeight="177.0" prefWidth="329.0" styleClass="lbl" />
