--- a/src/gui/order/SearchScreen.fxml
+++ b/src/gui/order/SearchScreen.fxml
@@ -17,7 +17,6 @@
       <Label id="search_title" layoutX="553.0" layoutY="129.0" text="Search for order:" />
    </children>
    <stylesheets>
-      <URL value="@GeneralStyleSheet.css" />
-      <URL value="@SearchScreenCSS.css" />
+      <URL value="@/general/GeneralStyleSheet.css" />
    </stylesheets>
 </Pane>
